final-architecture.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firstname-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firstname-service
  template:
    metadata:
      labels:
        app: firstname-service
    spec:
      containers:
        - image: 5pierre/firstnameservice:latest
          imagePullPolicy: Always
          name: firstname-container
          ports:
            - containerPort: 80  
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: firstname-service        
  labels:
    app: firstname-service
spec:
  type: NodePort
  ports:
    - port: 80                   
      targetPort: 80             
      protocol: TCP
  selector:
    app: firstname-service
  type: ClusterIP                

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rental-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rental-service
  template:
    metadata:
      labels:
        app: rental-service
    spec:
      containers:
        - image: 5pierre/rentalservice:v2  
          imagePullPolicy: Always
          name: rental-container
          ports:
            - containerPort: 8080
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: rental-service
  labels:
    app: rental-service
spec:
  type: NodePort
  ports:
    - port: 8080                 
      targetPort: 8080           
      protocol: TCP
  selector:
    app: rental-service
  type: LoadBalancer
