myservice-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: first-service
  template:
    metadata:
      labels:
        app: first-service
    spec:
      containers:
        - image: 5pierre/firstnameservice
          imagePullPolicy: IfNotPresent
          name: first-service
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: first-service
  name: first-service
spec:
  ports:
    - nodePort: 30945
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: first-service
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rental-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rental-service
  template:
    metadata:
      labels:
        app: rental-service
    spec:
      containers:
        - image: 5pierre/rentalservice:v2
          imagePullPolicy: IfNotPresent
          name: rental-service
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rental-service
  name: rental-service
spec:
  ports:
    - nodePort: 30946
      port: 8081
      protocol: TCP
      targetPort: 8080
  selector:
    app: rental-service
  type: LoadBalancer
